# hitori-bot

./: .gitignore  .rustfmt.toml  Cargo.toml
.sqlx/: query-0ff58f14b870c1d7c3c57494eabe3989709003b39039d1da63f88fe035cf1dd1.json
migrations/: 20240702121910_init.sql  20240716153618_init.sql
src/: main.rs  util.rs
src/commands/: mod.rs  util.rs
src/commands/reminders/: follow.rs  mod.rs  reminder_list.rs  remindme.rs  unfollow.rs  util.rs
src/commands/utility/: mod.rs  set_fallback_channel.rs  set_utc_offset.rs
src/tasks/: mod.rs
src/tasks/reminders/: check_reminders.rs  mod.rs
