[package]
name = "hitori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15" # fake environment variables
poise = "0.6" # command stuff for serenity
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # network stuff
regex = "1.10" # regex
chrono = "0.4" # time suffering
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] } # sqlite
to-arraystring = "0.2" #
arrayvec = "0.7" #
serde = "1" # serialization
serde_json = "1" # also serialization
tracing = "0.1" # logging
tracing-subscriber = "0.3" #

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }